[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Hirtol <advent@hirtol.top>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Basics
clap = "3.0.0-beta.2"
anyhow = "1.0.32"
rayon = "1.4.0"
itertools = "0.9.0"
hex = "0.4.2"
